Info on blossum scoring matrix.

--- a/22_11_29-hh-bioinformatics.ipynb
+++ b/22_11_29-hh-bioinformatics.ipynb
@@ -72,7 +72,35 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Sequence alignment\n",
+    "\n",
+    "Sequence alignment is a process of arranging two or more sequences in a way that maximizes the number of matching or similar elements between them. Alignments can be used to compare sequences, find patterns, and infer evolutionary relationships. Sequence alignment can be used to align any type of sequence, including DNA, RNA, proteins, other molecules and even text. Alignment algorithms can also be used to compare multiple sequences at once. The alignment can be done either manually or with bioinformatics software. In order to perform sequence alignment, you will need the two or more sequences you wish to align, as well as a scoring matrix. The scoring matrix is used to assign scores to the matches and mismatches between the two sequences. This score is then used to determine the best alignment of the sequences.\n",
+    "\n",
+    "The scoring matrix provides one handle to incorporate any prior information or biases about how two sequences should best align. Sequence alignment scoring matrices can include values for matches, mismatches, gaps, and other characteristics of the sequences. The values can be either positive or negative, depending on the type of alignment being performed. Sequence alignment values are not always symmetrical because different matches and mismatches may be given different scores. For example, a match between two amino acids may be given a higher score than a match between two nucleotides. As a result, the scoring matrix will not always be symmetrical.\n",
+    "\n",
+    "![blossum scoring matrix](./figures/22_30_11-hh-blossum_scoring_matrix.png)\n",
+    "\n",
+    "Once we have defined a scoring matrix we also need to define a gap penalty. Gap penalties are used to penalize gaps in the alignment of sequences. There are various types of gap penalties: constant, linear and affine, convex and profile based (see [Gap Penalty](https://en.wikipedia.org/wiki/Gap_penalty)). Linear gap penalties assign a fixed penalty for each gap, while affine gap penalties assign a penalty that increases with the length of the gap.\n",
+    "\n",
+    "We can then solve these pairwise sequence alignment problems using dynamic programming. Dynamic programming is a technique used to solve complex optimization problems by breaking them down into smaller subproblems. It is used in sequence alignment to determine the optimal alignment of two sequences by considering the cost of all possible alignments of the sequences. Common sequence dynamic programming sequence alignment algorithms include the Needleman Wunsch algorithm, the Smith Waterman algorithm. These algorithms are used to align two or more sequences by finding the highest-scoring sequence alignment between the sequences, based on the scorring matrix, sequences and gap penalty.\n",
+    "\n",
+    "ToDo: Run through an example. Simple in scope but broad in use of affine gap penalty, \n",
+    "\n",
+    "## Multiple sequences alignment\n",
+    "Multiple sequence alignment is a process of aligning two or more biological sequences of nucleic acid (DNA or RNA) or protein to identify regions of similarity that may be indicative of functional, structural, or evolutionary relationships between the sequences. It is generally used in bioinformatics to assist in predicting the structure and function of newly identified molecules. It is also used in evolutionary biology to create phylogenetic trees and study the evolutionary relationships between sequences.\n",
+    "\n",
+    "Multiple sequence alignment is different from pairwise sequence alignment in that it aligns more than two sequences at once. This allows for comparison of multiple sequences in order to identify common patterns and similarities between them. It also allows for the identification of conserved regions across the aligned sequences, which can be used to make inferences about the function and structure of the sequences. Pairwise sequence alignment, on the other hand, aligns only two sequences at a time, so it is not as useful for making inferences about the sequences.\n",
+    "\n",
+    "Combining pairwise alignments to make multiple sequence alignments is not possible because pairwise alignments do not take into account the relationships between the sequences. Multiple sequence alignments consider the relationships between the sequences, which is necessary for making inferences about the sequences. Additionally, pairwise alignments do not consider the evolutionary history of the sequences, which is important for making meaningful inferences.\n",
+    "\n",
+    "Multiple sequence alignment allows us to search for more remote sequences in the ‘twilight-zone’ because it considers the evolutionary history of the sequences. By considering the evolutionary history of the sequences, it is possible to identify conserved regions that may not be present in pairwise alignments, which can then be used to make inferences about the sequences. This allows us to search for more remote sequences that may have diverged significantly from the original sequences.\n",
+    "\n",
+    "There are various ways to score multiple sequence alignments. The sum of pairs approach is a method of multiple sequence alignment that evaluates a sequence alignment based on the sum of the pairwise similarities between the aligned positions. It is used to evaluate the quality of a multiple sequence alignment and can also be used to identify conserved regions across the aligned sequences.\n",
+    "\n",
+    "The approach works as follows\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
